--- a/python/src/requirements.txt
+++ b/python/src/requirements.txt
@@ -1,7 +1,10 @@
 colorama==0.4.6
-pymongo==4.6.0
+pymongo==4.14.1
 groq==0.31.0
-ollama==0.1.6
-openai==1.3.0
+ollama==0.5.3
+openai==1.104.2
 google-cloud-aiplatform==1.36.0
-python-dotenv==1.0.0
+python-dotenv==1.0.1
+beeai-framework==0.1.41
+langchain-community==0.3.27
+langchain-core==0.3.71
