feat: Add PostgreSQL database validator tool
Adds comprehensive PostgreSQL database validation tool following the
established pattern of the existing MongoDB validator.

Features:
- Validates table integrity, indexes, and constraints
- Two modes: single table or all tables in database
- Reports live/dead tuples and vacuum statistics
- Detects invalid or unready indexes
- Validates all constraint types (PK, FK, CHECK, etc.)
- Returns JSON-formatted results for LLM consumption

Security improvements:
- Input validation via regex for database/table names
- Safe parameter passing using psql -v flag
- No shell expansion or eval() usage
- Timeout protection (60s per table, 30s for listing)
- Defense-in-depth validation at TypeScript layer

Configuration:
- POSTGRES_DB_NAME: Database to validate
- POSTGRES_TABLE_NAME: Single table (if not validating all)
- POSTGRES_VALIDATE_ALL_TABLES: "true" for all tables mode

Files:
- src/helpers/postgresDataValidator.sql: Validation SQL (130 lines)
- src/helpers/dataValidatorTools.ts: PostgreSQLDataValidatorTool
- src/agent.ts: Register tool with agent
- .env.template: Configuration variables

Tested with PostgreSQL 15.x, validating databases up to 2.6M rows
across 20 tables with complete integrity checks.

Signed-off-by: Scott Jangro <sjangro@gmail.com>

--- a/.env.template
+++ b/.env.template
@@ -57,3 +57,9 @@ USER_EMAIL=""
 MONGO_DB_CONN_STRING="mongodb://localhost"
 MONGODB_NAME=""
 MONGODB_COLLECTION_NAME=""
+
+# set PostgreSQL database name and table for PostgreSQL validation tool
+POSTGRES_DB_NAME=""
+POSTGRES_TABLE_NAME=""
+# set to "true" to validate all tables in database, "false" to validate single table
+POSTGRES_VALIDATE_ALL_TABLES="false"
