--- a/.gitignore
+++ b/.gitignore
@@ -131,5 +131,6 @@ dist
 
 python/cyberres-mcp/.venv/*
 
-python/cyberres-mcp/__pycache__/
+python/cyberres-mcp/__pycache__/*
 python/cyberres-mcp/plugins/__pycache__/
+secrets.config.json
